unpackaged/main/default/objects/npsp__Engagement_Plan_Task__c/npsp__Engagement_Plan_Task__c.object-meta.xml
<CustomObject>
    <description>An Engagement Plan Task defines the details of each task that is created when applying an Engagement Plan to a record.</description>
    <label>Engagement Plan Task</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Plan Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>