unpackaged/main/default/objects/npsp__Engagement_Plan_Task__c/fields/npsp__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>npsp__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the User you'd like to assign the task to. If you leave this field blank, NPSP assigns the task based on the Engagement Plan Template's Default Assignee.</description>
    <inlineHelpText>Lookup to the User you'd like to assign the task to. If you leave this field blank, NPSP assigns the task based on the Engagement Plan Template's Default Assignee.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Plan_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>