unpackaged/main/default/objects/npsp__Engagement_Plan_Task__c/fields/npsp__Days_After__c.field-meta.xml
<CustomField>
    <fullName>npsp__Days_After__c</fullName>
    <description>The number of days after the Engagement Plan creation date that this Task is due. For dependent Tasks, the number of days after the parent Task's due date that this Task is due.</description>
    <inlineHelpText>The number of days after the Engagement Plan creation date that this Task is due. For dependent Tasks, the number of days after the parent Task's due date that this Task is due.</inlineHelpText>
    <label>Days After</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>