unpackaged/main/default/objects/npsp__Engagement_Plan_Task__c/fields/npsp__Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>npsp__Parent_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates that this Engagement Plan Task is dependent on a Parent Task.</description>
    <inlineHelpText>Indicates that this Engagement Plan Task is dependent on a Parent Task.</inlineHelpText>
    <label>Parent Task</label>
    <referenceTo>npsp__Engagement_Plan_Task__c</referenceTo>
    <relationshipLabel>Engagement Plan Tasks</relationshipLabel>
    <relationshipName>Engagement_Plan_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>