unpackaged/main/default/objects/npsp__Engagement_Plan_Task__c/fields/npsp__Reminder__c.field-meta.xml
<CustomField>
    <fullName>npsp__Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets a reminder for the Task.</description>
    <inlineHelpText>Sets a reminder for the Task.</inlineHelpText>
    <label>Reminder</label>
    <type>Checkbox</type>
</CustomField>