unpackaged/main/default/objects/npsp__Engagement_Plan_Task__c/fields/npsp__Status__c.field-meta.xml
<CustomField>
    <fullName>npsp__Status__c</fullName>
    <description>The Status of a Task. Dependent Tasks are set to "Waiting on Parent Task" until their Parent Task is completed.</description>
    <inlineHelpText>The Status of a Task. Dependent Tasks are set to "Waiting on Parent Task" until their Parent Task is completed.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Waiting on someone else</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>